--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -17,13 +17,19 @@ jobs:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and tag
+            - name: Build
               run: |
-                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest .
+                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest 
+                echo "Build complete"
+            
+            - name: Tag
+              run: |
                 docker tag ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest /
                 ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:${GITHUB_SHA::7}
+                echo "Tagging complete"
 
             - name: Push
               run: |
                 docker push ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest
                 docker push ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:${GITHUB_SHA::7}
+                echo "Push complete"
