--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -19,17 +19,17 @@ jobs:
 
             - name: Build
               run: |
-                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest .
+                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:latest .
                 echo "Build complete"
             
             - name: Tag
               run: |
-                docker tag ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest \
+                docker tag ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:latest \
                 ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:${GITHUB_SHA::7}
                 echo "Tagging complete"
 
             - name: Push
               run: |
-                docker push ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:Latest
+                docker push ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:latest
                 docker push ${{ secrets.DOCKERHUB_USERNAME }}/smart-mirror-dashboard:${GITHUB_SHA::7}
                 echo "Push complete"
