--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Prepare Website
         run: |
           mkdir -p ./public_site
-          cp -r -v *.html css/ js/ ./public_site/
+          cp -r -v *.html css/ js/ img/ ./public_site/
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
