ci: preparing to merge by adding main to the pipeline trigger

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,8 @@
 on:
   push: 
-      branches: ["devops"]
+      branches: ["devops","main"]
   pull_request:
-      branches: ["devops"]
+      branches: ["devops","main"]
 
 permissions:
   contents: read
